<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_scoreSaveTitle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_saveScore"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_editEnterNickame" />

        <Button
            android:id="@+id/buttonSaveScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_buttonSaveScore" />

        <Button
            android:id="@+id/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_buttonMainMenu" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>